# elastool_aims

./: README.md  pyproject.toml  setup.cfg
elastool_aims/: aims_utils.py  calc_elastic_constants.py  calc_elastic_elate.py  calc_stress.py  find_spg.py  make_conv_cell.py  optimize_initial_str.py  read_input.py
elastool_aims.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/Si/: aims_opt_w_cell.json  geometry.in
examples/TiB2/: aims_opt_wo_cell.json  elastool.in  geometry.in
