[metadata]
name = elastool_aims
version = 1.0
description = Elastic tool for zero and finite-temperature elastic constants and mechanical properties calculations for FHI-aims
author = Yi Yao
author_email = yaoyi92@gmail.com
url = 
license = GNU GPL version 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    seaborn
    pymatgen
    kaleido
    plotly
    spglib
    ase
    pyvista
    selenium
scripts = 
    bin/elastool_aims
